# Portfolio

./: .gitignore  README.md
GA Portfolio Optimizer/: ETF.xlsx  GA_Portfolio_Optimizers.ipynb
data_science_projects/docubot/: pyproject.toml
data_science_projects/docubot/tests/: 2.0
data_science_projects/hosing_prices_predictions/: data_transformation.ipynb  housing_prices_regression.ipynb  learnings.md  modelling.ipynb  optimal_model.pkl  pyproject.toml  submission.csv  transform_data.py
data_science_projects/housing_prices_regression/: housing_prices_regression.ipynb
data_science_projects/mac_uni_chatbot/: README.md
data_science_projects/mac_uni_chatbot/testing/: data_gathering.ipynb
data_science_projects/wordle_solver/: dictionary.py  wordle_game.py
dev_projects/investment_portfolio_tracker/: README.md
dev_projects/investment_portfolio_tracker/inv_tracker/: manage.py
dev_projects/investment_portfolio_tracker/inv_tracker/inv_tracker/: asgi.py  settings.py  urls.py  wsgi.py
dev_projects/investment_portfolio_tracker/inv_tracker/investor_tracker/: apps.py  views.py
dev_projects/investment_tracker/: README.md  requirements.txt
dev_projects/investment_tracker/docs/: solution_design.drawio
dev_projects/investment_tracker/src/: chat_gpt.py  discord_bot.py  inv_data.py  main.py
dev_projects/web_scrapper_azure_function/: .gitignore  README.MD  function_app.py  requirements.txt
linkedService/: datascienceportfolio-WorkspaceDefaultSqlServer.json  datascienceportfolio-WorkspaceDefaultStorage.json
(+1 files in other folders)
