[tool.poetry]
name = "docubot"
version = "0.1.0"
description = ""
authors = ["Jbugden97 <72581711+Jbugden97@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
transformers = "^4.33.1"
torch = "^2.0.1"
huggingface = "^0.0.1"
torchvision = {version = "^0.15.2+cpu", source = "pytorch"}


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
